[ai-assisted] refactor(ai): 1.x LangChain4j 백포트
Issue: 없음

예외 사유: 사용자가 2.x 기반 1.x 재구성 계획 구현과 PR 등록을 직접 요청함.

변경 사항:

- Spring Boot 2.7.18 / Java 11 기준으로 1.x 소스와 테스트를 다운포팅함.

- Spring AI main dependency/import를 제거하고 LangChain4j core/provider 직접 bean 구성으로 전환함.

- studio.ai.* canonical 설정과 spring.ai.* migration fallback을 유지함.

- Boot 2 호환 spring.factories 기반 auto-configuration으로 전환함.

- OpenAI/Ollama/Gemini chat/embedding provider adapter와 request override, streaming, Gemini base-url fail-fast를 보완함.

검증:

- ./gradlew clean compileJava compileTestJava: 성공

리뷰:

- 서브에이전트 반복 리뷰 수행: request override/streaming/Gemini base-url/system-message blocker 조치 후 최종 PASS 확인.

AI-Assisted: Yes