@@ -3,7 +3,7 @@ package studio.one.platform.ai.web.controller;
 import java.util.List;
 import java.util.Map;
 
-import jakarta.validation.Valid;
+import javax.validation.Valid;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -165,7 +165,7 @@ public class RagController {
                         result.content(),
                         result.metadata(),
                         result.score()))
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
         return ResponseEntity.ok(new SearchResponse(payload));
     }
 
