@@ -4,31 +4,45 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Collections;
 
 /**
  * Parser-neutral logical block prepared for chunking.
  */
-public record NormalizedBlock(
-        String id,
-        NormalizedBlockType type,
-        String text,
-        String sourceRef,
-        Integer page,
-        Integer slide,
-        Integer order,
-        String parentBlockId,
-        String headingPath,
-        List<String> blockIds,
-        Double confidence,
-        Map<String, Object> metadata) {
+public class NormalizedBlock {
+    private final String id;
+    private final NormalizedBlockType type;
+    private final String text;
+    private final String sourceRef;
+    private final Integer page;
+    private final Integer slide;
+    private final Integer order;
+    private final String parentBlockId;
+    private final String headingPath;
+    private final List<String> blockIds;
+    private final Double confidence;
+    private final Map<String, Object> metadata;
+
+
 
     public static final String KEY_ROW_COUNT = "rowCount";
     public static final String KEY_CELL_COUNT = "cellCount";
     public static final String KEY_HEADING_PATH = "headingPath";
     public static final String KEY_BLOCK_IDS = "blockIds";
     public static final String KEY_CONFIDENCE = "confidence";
-
-    public NormalizedBlock {
+    public NormalizedBlock(
+            String id,
+            NormalizedBlockType type,
+            String text,
+            String sourceRef,
+            Integer page,
+            Integer slide,
+            Integer order,
+            String parentBlockId,
+            String headingPath,
+            List<String> blockIds,
+            Double confidence,
+            Map<String, Object> metadata) {
         id = normalize(id);
         type = type == null ? NormalizedBlockType.UNKNOWN : type;
         text = text == null ? "" : text.trim();
@@ -37,6 +51,19 @@ public record NormalizedBlock(
         headingPath = normalize(headingPath);
         blockIds = sanitizeList(blockIds, id, sourceRef);
         metadata = sanitize(metadata);
+    
+        this.id = id;
+        this.type = type;
+        this.text = text;
+        this.sourceRef = sourceRef;
+        this.page = page;
+        this.slide = slide;
+        this.order = order;
+        this.parentBlockId = parentBlockId;
+        this.headingPath = headingPath;
+        this.blockIds = blockIds;
+        this.confidence = confidence;
+        this.metadata = metadata;
     }
 
     public NormalizedBlock(
@@ -76,7 +103,7 @@ public record NormalizedBlock(
             if (key == null || key.isBlank() || value == null) {
                 return;
             }
-            if (value instanceof String stringValue && stringValue.isBlank()) {
+            if (value instanceof String && ((String) value).isBlank()) {
                 return;
             }
             sanitized.put(key, value);
@@ -85,12 +112,12 @@ public record NormalizedBlock(
     }
 
     private static List<String> sanitizeList(List<String> values, String fallbackId, String fallbackSourceRef) {
-        List<String> sanitized = values == null ? List.of() : values.stream()
+        List<String> sanitized = values == null ? List.of() : Collections.unmodifiableList(values.stream()
                 .filter(Objects::nonNull)
                 .map(String::trim)
                 .filter(value -> !value.isBlank())
                 .distinct()
-                .toList();
+                .collect(java.util.stream.Collectors.toList()));
         if (!sanitized.isEmpty()) {
             return sanitized;
         }
@@ -177,5 +204,53 @@ public record NormalizedBlock(
             return new NormalizedBlock(id, type, text, sourceRef, page, slide, order, parentBlockId,
                     headingPath, blockIds, confidence, metadata);
         }
+    }
+
+    public String id() {
+        return id;
+    }
+
+    public NormalizedBlockType type() {
+        return type;
+    }
+
+    public String text() {
+        return text;
+    }
+
+    public String sourceRef() {
+        return sourceRef;
+    }
+
+    public Integer page() {
+        return page;
+    }
+
+    public Integer slide() {
+        return slide;
+    }
+
+    public Integer order() {
+        return order;
+    }
+
+    public String parentBlockId() {
+        return parentBlockId;
+    }
+
+    public String headingPath() {
+        return headingPath;
+    }
+
+    public List<String> blockIds() {
+        return blockIds;
+    }
+
+    public Double confidence() {
+        return confidence;
+    }
+
+    public Map<String, Object> metadata() {
+        return metadata;
     }
 }
