@@ -2,6 +2,7 @@ package studio.one.base.user.infrastructure.persistence.jpa;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.stream.Collectors;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -12,7 +13,6 @@ import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
-import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
@@ -31,7 +31,6 @@ import studio.one.base.user.domain.model.ApplicationUser;
 class ApplicationGroupMembershipJpaRepositorySearchTest {
 
     @Container
-    @ServiceConnection
     static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:16-alpine");
 
     @Autowired
@@ -100,7 +99,7 @@ class ApplicationGroupMembershipJpaRepositorySearchTest {
     private java.util.List<String> usernames(Page<ApplicationGroupMemberSummary> page) {
         return page.getContent().stream()
                 .map(ApplicationGroupMemberSummary::getUsername)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private ApplicationGroup group(String name) {
